--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,7 @@ ul.service-list li i {
   padding: 10px 30px;
   background-color: #BE9E21;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   -webkit-transform: rotateY(-180deg);
   -moz-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
@@ -474,6 +475,7 @@ ul.service-list li i {
 
 .portfolio-item figure img {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
   transition: all .5s
